# ECLTest4

./: .gitignore  ArgParsing.h  CMakeLists.txt  ECLTest3.c  ECLTest3.h  ECL_util.h  Mapping.h  OLD_CMakeSettings.json  SHUT_UP_VS.h  StringStream.c  StringStream.h  Symbols.h  Tokenizer.c  Tokenizer.h  _RegisterWatch.h  __READ_ME.txt  __TEST.c  __TEST.h  document.html  ecldata1.ecl_dump  ecldata_yeet.ecl_dump  th06.eclm
